src/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Apttus_QPConfig__EndDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPConfig__EndDate__c</fullName>
    <description>The end date for products and services</description>
    <encryptionScheme>None</encryptionScheme>
    <label>End Date</label>
    <type>Date</type>
</CustomField>