src/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Apttus_QPConfig__PurchaseId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPConfig__PurchaseId__c</fullName>
    <description>The purchase identifier associated with the asset</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>The purchase identifier associated with the asset</inlineHelpText>
    <label>Purchase Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>