src/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/CPQ_SSF_Permission__c.field-meta.xml
<CustomField>
    <fullName>CPQ_SSF_Permission__c</fullName>
    <description>Reference to SSF Permitted from product record.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Reference to SSF Permitted from product record.</inlineHelpText>
    <label>SSF Permission</label>
    <length>1</length>
    <type>Text</type>
</CustomField>