src/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/NokiaCPQ_Extended_CLP_2__c.field-meta.xml
<CustomField>
    <fullName>NokiaCPQ_Extended_CLP_2__c</fullName>
    <label>Extended CLP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>