src/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/NokiaCPQ_ExtendedAdvance_NP__c.field-meta.xml
<CustomField>
    <fullName>NokiaCPQ_ExtendedAdvance_NP__c</fullName>
    <label>Extended NP</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>