src/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/NokiaCPQ_Maint_Yr2_Extended_Price__c.field-meta.xml
<CustomField>
    <fullName>NokiaCPQ_Maint_Yr2_Extended_Price__c</fullName>
    <label>NokiaCPQ Maint Yr2 Extended Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>