src/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/NokiaCPQ_Product_Category__c.field-meta.xml
<CustomField>
    <fullName>NokiaCPQ_Product_Category__c</fullName>
    <formula>if(is_Custom_Product__c == true , &quot;Custom Product &quot;,
IF(TEXT(Apttus_QPConfig__LineType__c) =&quot;Product/Service&quot;, TEXT(Apttus_Proposal__Product__r.NokiaCPQ_Category__c),  TEXT(Apttus_QPConfig__OptionId__r.NokiaCPQ_Category__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Category</label>
    <type>Text</type>
</CustomField>