src/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/NokiaCPQ_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>NokiaCPQ_Product_Name__c</fullName>
    <formula>if(is_Custom_Product__c == true , Custom_Product_Name__c,
IF(TEXT(Apttus_QPConfig__LineType__c )= &quot;Product/Service&quot;,Apttus_Proposal__Product__r.Name , Apttus_QPConfig__OptionId__r.Name ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>