src/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/NokiaCPQ_Rationale_Of_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>NokiaCPQ_Rationale_Of_Adjustment__c</fullName>
    <description>Req 6001: Rationale for adjustment given on cart</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Discount Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>