src/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/NokiaCPQ_Unitary_IRP__c.field-meta.xml
<CustomField>
    <fullName>NokiaCPQ_Unitary_IRP__c</fullName>
    <label>Unitary IRP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>