src/objects/Apttus_Proposal__Proposal_Line_Item__c/recordTypes/Proposal_Line_Item_Read_Only.recordType-meta.xml
<RecordType>
    <fullName>Proposal_Line_Item_Read_Only</fullName>
    <active>true</active>
    <label>Proposal Line Item Read Only</label>
</RecordType>